# kannel-sqlbox

./: AUTHORS  CHANGES  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  UPGRADE  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  configure.in  libtool  sb-config.h.in  sqlbox-faq.txt  sqlbox.patch
doc/: userguide.xml
example/: sqlbox.conf.example
gw/: Makefile.am  Makefile.in  sqlbox-cfg.def  sqlbox.c  sqlbox_mssql.c  sqlbox_mssql.h  sqlbox_mysql.c  sqlbox_mysql.h  sqlbox_oracle.c  sqlbox_oracle.h  sqlbox_pgsql.c  sqlbox_pgsql.h  sqlbox_sdb.c  sqlbox_sdb.h  sqlbox_sql.c  sqlbox_sql.h  sqlbox_sqlite.c  sqlbox_sqlite.h  sqlbox_sqlite3.c  sqlbox_sqlite3.h
gwlib/: dbpool_mssql.c
